[workspace]
resolver = "2"

members = ["sip/*", "media/*", "examples"]

[workspace.package]
authors = ["kbalt"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kbalt/ezk"

[workspace.dependencies]
internal = { package = "ezk-internal", version = "0.2.0", path = "sip/internal" }
sip-auth = { package = "ezk-sip-auth", version = "0.5.0", path = "sip/sip-auth" }
sip-core = { package = "ezk-sip-core", version = "0.8.0", path = "sip/sip-core" }
sip-types = { package = "ezk-sip-types", version = "0.6.0", path = "sip/sip-types" }
sip-ua = { package = "ezk-sip-ua", version = "0.8", path = "sip/sip-ua" }

ice = { package = "ezk-ice", version = "0.1.0", path = "media/ice" }
rtp = { package = "ezk-rtp", version = "0.3.0", path = "media/rtp" }
sdp-types = { package = "ezk-sdp-types", version = "0.5.0", path = "media/sdp-types" }
stun = { package = "ezk-stun", version = "0.4.0", path = "media/stun" }
stun-types = { package = "ezk-stun-types", version = "0.3.0", path = "media/stun-types" }
rtc = { package = "ezk-rtc", version = "0.1.0", path = "media/rtc" }

rustls-pki-types = { version = "1", features = ["std"] }
tokio-native-tls = { version = "0.3" }
tokio-rustls = { version = "0.26", default-features = false }

log = "0.4"

[workspace.lints.rust]
unreachable_pub = "warn"
