[workspace]
resolver = "2"

members = ["sip/*", "media/*", "examples"]

[workspace.package]
authors = ["kbalt"]
edition = "2021"
license = "MIT"
repository = "https://github.com/kbalt/ezk"

[workspace.dependencies]
internal = { package = "ezk-internal", version = "0.2.0", path = "sip/internal" }
sip-types = { package = "ezk-sip-types", version = "0.4.0", path = "sip/sip-types" }
sip-core = { package = "ezk-sip-core", version = "0.6.0", path = "sip/sip-core" }
sip-ua = { package = "ezk-sip-ua", version = "0.6.0", path = "sip/sip-ua" }
sip-auth = { package = "ezk-sip-auth", version = "0.3.0", path = "sip/sip-auth" }

sdp-types = { package = "ezk-sdp-types", version = "0.5.0", path = "media/sdp-types" }

stun-types = { package = "ezk-stun-types", version = "0.3.0", path = "media/stun-types" }
stun = { package = "ezk-stun", version = "0.4.0", path = "media/stun" }

tokio-rustls = { version = "0.26", default-features = false }
rustls-pki-types = { version = "1", features = ["std"] }
tokio-native-tls = { version = "0.3" }
