[workspace]
resolver = "2"

members = ["sip/*", "media/*", "media-video/*", "examples"]

[workspace.package]
authors = ["kbalt"]
edition = "2024"
license = "MIT"
repository = "https://github.com/kbalt/ezk"

[workspace.dependencies]
internal = { package = "ezk-internal", version = "0.2.0", path = "sip/internal" }
sip-auth = { package = "ezk-sip-auth", version = "0.5.0", path = "sip/sip-auth" }
sip-core = { package = "ezk-sip-core", version = "0.8.0", path = "sip/sip-core" }
sip-types = { package = "ezk-sip-types", version = "0.6.0", path = "sip/sip-types" }
sip-ua = { package = "ezk-sip-ua", version = "0.8", path = "sip/sip-ua" }

ice = { package = "ezk-ice", version = "0.1.0", path = "media/ice" }
rtp = { package = "ezk-rtp", version = "0.3.0", path = "media/rtp" }
sdp-types = { package = "ezk-sdp-types", version = "0.5.0", path = "media/sdp-types" }
stun = { package = "ezk-stun", version = "0.4.0", path = "media/stun" }
stun-types = { package = "ezk-stun-types", version = "0.3.0", path = "media/stun-types" }
rtc = { package = "ezk-rtc", version = "0.1.0", path = "media/rtc" }
srtp = { package = "ezk-srtp", version = "0.1.0", path = "media/srtp" }

h264 = { package = "ezk-h264", version = "0.1.0", path = "media-video/h264" }
libva = { package = "ezk-libva", version = "0.1.0", path = "media-video/libva" }
vulkan = { package = "ezk-vulkan", version = "0.1.0", path = "media-video/vulkan" }
capture = { package = "ezk-capture", version = "0.1.0", path = "media-video/capture" }

rustls-pki-types = { version = "1", features = ["std"] }
tokio-native-tls = { version = "0.3" }
tokio-rustls = { version = "0.26", default-features = false }

log = "0.4"

ezk-image = { version = "0.4", default-features = false }

[workspace.lints.rust]
unreachable_pub = "warn"

