[package]
name = "examples"
version = "0.0.0"
edition = "2018"
publish = false

[dev-dependencies]
sip-types = { path = "../crates/sip-types", package = "ezk-sip-types" }
sip-core = { path = "../crates/sip-core", package = "ezk-sip-core" }
sip-ua = { path = "../crates/sip-ua", package = "ezk-sip-ua" }
sip-auth = { path = "../crates/sip-auth", package = "ezk-sip-auth" }

tokio = { version = "1", features = ["rt", "macros"] }

async-trait = "0.1"
bytesstr = "1"
tracing-subscriber = "0.2"

[[example]]
name = "register"
path = "register.rs"

[[example]]
name = "accept_invite"
path = "accept_invite.rs"

[[example]]
name = "send_invite"
path = "send_invite.rs"
