[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
sip-types.workspace = true
sip-core.workspace = true
sip-ua.workspace = true
sip-auth.workspace = true

tokio = { version = "1", features = ["rt", "macros"] }

async-trait = "0.1"
bytesstr = "1"
tracing-subscriber = "0.3"

tokio-native-tls.workspace = true

[[example]]
name = "register"
path = "register.rs"

[[example]]
name = "accept_invite"
path = "accept_invite.rs"

[[example]]
name = "send_invite"
path = "send_invite.rs"
