[package]
name = "examples"
version = "0.0.0"
edition = "2021"
publish = false
license.workspace = true

[dev-dependencies]
sip-types.workspace = true
sip-core = { workspace = true, features = ["tls-native-tls"] }
sip-ua.workspace = true
sip-auth.workspace = true
sdp-types.workspace = true
rtc.workspace = true

tokio = { version = "1", features = ["rt", "macros", "signal"] }

async-trait = "0.1"
bytesstr = "1"
env_logger = "0.11"

tokio-native-tls.workspace = true

[[example]]
name = "register"
path = "register.rs"

[[example]]
name = "accept_invite"
path = "accept_invite.rs"

[[example]]
name = "make_call"
path = "make_call.rs"
