[package]
name = "ezk-internal"
version = "0.1.0"
edition = "2018"
authors = ["Konstantin Baltruschat <konstantin.baltruschat@gmail.com>"]
description = "ezk internal util"
repository = "https://github.com/kbalt/ezk"
license = "MIT"
categories = []
keywords = []
readme = "README.md"

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }

anyhow = "1"
