[package]
name = "ezk-internal"
version = "0.1.0"
description = "ezk internal util"
categories = []
keywords = []
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nom = { version = "7", default-features = false, features = ["alloc"] }

anyhow = "1"
