[package]
name = "ezk-sdp-types"
version = "0.2.0"
description = "SDP types providing parsing & serialization"
categories = ["network-programming", "multimedia"]
keywords = ["sdp"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
internal = { package = "ezk-internal", path = "../internal", version = "0.2" }

bytesstr = "1"
nom = { version = "7", default-features = false, features = ["alloc"] }
bytes = "1"
thiserror = "1"
