[package]
name = "ezk-sip-auth"
version = "0.2.0"
description = "RFC8769 compliant SIP authentication"
categories = ["network-programming", "multimedia"]
keywords = ["sip", "auth"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sip-types = { package = "ezk-sip-types", path = "../sip-types", version = "0.3" }

bytesstr = "1"
md5 = "0.7"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
log = "0.4"
