[package]
name = "ezk-sip-core"
version = "0.1.2"
edition = "2018"
authors = ["Konstantin Baltruschat <konstantin.baltruschat@gmail.com>"]
description = "SIP core crate providing abstrations over transport and transactions"
repository = "https://github.com/kbalt/ezk"
license = "MIT"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

[dependencies]
internal = { package = "ezk-internal", path = "../internal", version = "0.1" }
sip-types = { package = "ezk-sip-types", path = "../sip-types", version = "0.1" }
stun-types = { package = "ezk-stun-types", path = "../stun-types", version = "0.1.1" }
stun = { package = "ezk-stun", path = "../stun", version = "0.1.1" }

tracing = "0.1"
bytes = "1"
tokio = { version = "1.5.0", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"
thiserror = "1"
parking_lot = "0.12"
rand = "0.8"
bytesstr = "1"
downcast-rs = "1"

tokio-rustls = { version = "0.24", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[features]
tls-rustls = ["dep:tokio-rustls"]
tls-native-tls = ["dep:tokio-native-tls"]
