[package]
name = "ezk-sip-core"
version = "0.6.0"
description = "SIP core crate providing abstrations over transport and transactions"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
internal.workspace = true
sip-types.workspace = true
stun-types.workspace = true
stun.workspace = true

tracing = "0.1"
bytes = "1"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "sync",
    "macros",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
async-trait = "0.1"
log = "0.4"
thiserror = "2"
parking_lot = "0.12"
rand = "0.9"
bytesstr = "1"
downcast-rs = "2"
hickory-resolver = "0.25.0-alpha.4"
multimap = "0.10"
nom = "7"

tokio-rustls = { version = "0.26", optional = true, default-features = false }
rustls-pki-types = { version = "1", features = ["std"], optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[features]
tls-rustls = ["dep:tokio-rustls", "dep:rustls-pki-types"]
tls-native-tls = ["dep:tokio-native-tls"]
