[package]
name = "ezk-sip-types"
version = "0.1.4"
description = "SIP types providing parsing & serialization"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
internal = { package = "ezk-internal", path = "../internal", version = "0.2" }

bytesstr = "1"
downcast-rs = "1.2.0"
memchr = "2"
percent-encoding = "2"
bytes = "1"
anyhow = "1"
lazy_static = "1"
thiserror = "1"
nom = { version = "7", default-features = false, features = ["alloc"] }
