[package]
name = "ezk-sip-ua"
version = "0.1.0"
edition = "2018"
authors = ["Konstantin Baltruschat <konstantin.baltruschat@gmail.com>"]
description = "SIP User Agent implementations"
repository = "https://github.com/kbalt/ezk"
license = "MIT"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]

[dependencies]
sip-types = { package = "ezk-sip-types", path = "../sip-types" }
sip-core = { package = "ezk-sip-core", path = "../sip-core" }

log = "0.4"
bytesstr = "1"
async-trait = "0.1"
parking_lot = "0.11"
tracing = "0.1"
rand = "0.8"
tokio = "1"
thiserror = "1"
slotmap = "1"
