[package]
name = "ezk-sip-ua"
version = "0.3.3"
description = "Low level SIP user agent utilities"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sip-types = { package = "ezk-sip-types", path = "../sip-types", version = "0.1" }
sip-core = { package = "ezk-sip-core", path = "../sip-core", version = "0.2" }

log = "0.4"
bytesstr = "1"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
rand = "0.8"
tokio = "1"
thiserror = "1"
slotmap = "1"
bytes = "1"
