[package]
name = "ezk-stun-types"
version = "0.1.0"
edition = "2018"
authors = ["Konstantin Baltruschat <konstantin.baltruschat@gmail.com>"]
description = "STUN/TURN message types"
repository = "https://github.com/kbalt/ezk"
license = "MIT"
categories = ["network-programming"]
keywords = ["stun", "turn"]
readme = "README.md"


[dependencies]
byteorder = "1.4"
rand = "0.8"
bitfield = "0.13"
bytes = "1"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"
thiserror = "1"
md5 = "0.7"
