[package]
name = "ezk-stun-types"
version = "0.1.2"
description = "STUN/TURN message types"
categories = ["network-programming"]
keywords = ["stun", "turn"]
readme = "README.md"


authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
byteorder = "1.4"
rand = "0.8"
bitfield = "0.15"
bytes = "1"
hmac = "0.12"
sha-1 = "0.10"
sha2 = "0.10"
thiserror = "1"
md5 = "0.7"
