[package]
name = "ezk-stun"
version = "0.1.0"
edition = "2018"
authors = ["Konstantin Baltruschat <konstantin.baltruschat@gmail.com>"]
description = "STUN endpoint for simple requests"
repository = "https://github.com/kbalt/ezk"
license = "MIT"
categories = ["network-programming"]
keywords = ["stun"]
readme = "README.md"

[dependencies]
stun-types = { path = "../stun-types", package = "ezk-stun-types" }
tokio = { version = "1", features = ["time", "sync"] }
bytes = "1"
hmac = "0.11"
parking_lot = "0.11"
async-trait = "0.1"
thiserror = "1"
