[package]
name = "ezk-stun"
version = "0.2.0"
description = "STUN endpoint for simple requests"
categories = ["network-programming"]
keywords = ["stun"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
stun-types = { path = "../stun-types", package = "ezk-stun-types", version = "0.1.1" }

tokio = { version = "1", features = ["time", "sync"] }
bytes = "1"
hmac = "0.12"
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "1"
