[package]
name = "ezk-av1"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["vulkan"]

vulkan = ["dep:vulkan"]

[dependencies]
bytes = "1.10.0"
log = "0.4"
thiserror = "2.0.11"
vulkan = { workspace = true, optional = true }
smallvec = "1"


[dev-dependencies]
env_logger = "0.11"
capture.workspace = true
tokio = { version = "1", features = ["sync", "macros", "rt"] }
ivf = "0.1.4"
