[package]
name = "ezk-capture"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
smallvec = "1"

[target.'cfg(target_family = "unix")'.dependencies]
ashpd = { version = "0.12", default-features = false, features = ["async-std"] }
pipewire = { version = "0.9", features = ["v0_3_33", "v0_3_44"] }

[lints]
workspace = true
