[package]
name = "ezk-h264"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["openh264"]
openh264 = ["dep:openh264", "dep:openh264-sys2"]


[dependencies]
bytes = "1.10.0"
thiserror = "2.0.11"
rand = "0.9"
bitstream-io = "4"
scap = "0.0.8"
ezk-image = "0.3.0"


openh264 = { version = "0.8", optional = true }
openh264-sys2 = { version = "0.8", optional = true }
log = "0.4"
libva.workspace = true
vulkan.workspace = true
h264-parser = "0.2"

[dev-dependencies]
env_logger = "0.11"
