[package]
name = "ezk-vulkan"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2"
log = "0.4"
ash = "0.38.0"
naga = { version = "27", features = ["wgsl-in", "spv-out"] }
thiserror = "2"
smallvec = "1"
ezk-image = { workspace = true, features = [
    "multi-thread",
    "NV12",
    "RGBA",
    "BGRA",
    "ARGB",
    "ABGR",
] }

wgpu = { version = "27", default-features = false, features = ["vulkan"] }
anyhow = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
env_logger = "0.11"

[lints]
workspace = true
