[package]
name = "ezk-vulkan"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log = "0.4"
ash-stable = { package = "ash", version = "0.38.0" }
ash = { package = "ash", git = "https://github.com/ash-rs/ash.git", rev = "20cdb2597fcaca2aa45eb184de22221bdad8d28c" }
naga = { version = "27", features = ["wgsl-in", "spv-out"] }
thiserror = "2"
smallvec = "1"
ezk-image = { workspace = true, features = [
    "multi-thread",
    "NV12",
    "RGBA",
    "BGRA",
    "ARGB",
    "ABGR",
] }

wgpu = { version = "27", default-features = false, features = ["vulkan"] }
anyhow = "1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
