[package]
name = "ezk-h264"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes = "1.10.0"
rand = "0.9.0"
thiserror = "2.0.11"

openh264 = { version = "0.7.1", optional = true }
openh264-sys2 = { version = "0.7.1", optional = true }

[features]
default = []
openh264 = ["dep:openh264", "dep:openh264-sys2"]
