[package]
name = "ezk-ice"
version = "0.1.0"
description = "ICE implementation"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
stun-types.workspace = true
sdp-types.workspace = true
rand = "0.9"
slotmap = "1.0.7"
log = "0.4"

[dev-dependencies]
env_logger = "0.11.5"
