[package]
name = "ezk-rtc-proto"
version = "0.1.0"
description = "SDP based media sessions"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ice.workspace = true
log.workspace = true
rtp.workspace = true
sdp-types.workspace = true
stun-types.workspace = true

base64 = "0.22"
bytes = "1"
bytesstr = "1.0.2"
futures-util = "0.3"
openssl = "0.10"
rand = "0.9"
slotmap = "1.0.7"
srtp = { version = "0.7", features = ["enable-openssl"], default-features = false }
thiserror = "2"

