[package]
name = "ezk-rtc"
version = "0.1.0"
description = "SDP based media sessions"
# edition.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ice.workspace = true
log.workspace = true
rtp.workspace = true
sdp-types.workspace = true
stun-types.workspace = true

base64 = "0.22"
bytes = "1"
bytesstr = "1.0.2"
openssl = "0.10"
rand = "0.9"
slotmap = "1.0.7"
srtp = { version = "0.7", features = [
    "enable-openssl",
], default-features = false }
thiserror = "2"
time = "0.3"

tokio = { version = "1", features = ["net", "macros", "time"], default-features = false, optional = true }
quinn-udp = { version = "0.5", optional = true }
local-ip-address = { version = "0.6", optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:quinn-udp", "dep:local-ip-address"]
