[package]
name = "ezk-session"
version = "0.1.0"
description = "SDP based media sessions"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ice.workspace = true
rtp.workspace = true
sdp-types.workspace = true
stun-types.workspace = true

base64 = "0.22"
bytes = "1"
bytesstr = "1.0.2"
futures-util = "0.3"
log = "0.4"
openssl = "0.10"
rand = "0.9"
slotmap = "1.0.7"
srtp = "0.7"
thiserror = "2"

tokio = { version = "1", features = ["net"] }
quinn-udp = "0.5"
local-ip-address = "0.6"

[features]
# Only enabled for CI runs
ci = ["openssl/vendored"]