[package]
name = "ezk-stun"
version = "0.4.0"
description = "STUN endpoint for simple requests"
categories = ["network-programming"]
keywords = ["stun"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
stun-types.workspace = true

tokio = { version = "1", features = ["time", "sync"] }
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "2"
