[package]
name = "ezk-sip-auth"
version = "0.4.0"
description = "SIP authentication framework"
categories = ["network-programming", "multimedia"]
keywords = ["sip", "auth"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sip-types.workspace = true

bytesstr = "1"
md5 = "0.7"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
log = "0.4"
