[package]
name = "ezk-sip-types"
version = "0.6.2"
description = "SIP types providing parsing & serialization"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
internal.workspace = true

bytesstr = "1"
memchr = "2"
percent-encoding = "2"
bytes = "1"
anyhow = "1"
lazy_static = "1"
nom = "7"
