[package]
name = "ezk-sip-ua"
version = "0.8.0"
description = "Low level SIP user agent utilities"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sip-types.workspace = true
sip-core.workspace = true

log = "0.4"
bytesstr = "1"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
rand = "0.9"
tokio = "1"
thiserror = "2"
slotmap = "1"
bytes = "1"
