[package]
name = "ezk-sip-ua"
version = "0.8.1"
description = "SIP user agent utilities"
categories = ["network-programming", "multimedia"]
keywords = ["sip"]
readme = "README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sip-types.workspace = true
sip-core.workspace = true
sdp-types.workspace = true
rtc = { workspace = true, optional = true }
rtp = { workspace = true, optional = true }
sip-auth.workspace = true

tokio-util = { version = "0.7", optional = true }
futures-sink = { version = "0.3", optional = true }

log = "0.4"
bytesstr = "1"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
rand = "0.9"
tokio = "1"
thiserror = "2"
slotmap = "1"
bytes = "1"

[features]
default = ["rtc"]
rtc = ["dep:rtc", "dep:rtp", "dep:tokio-util", "dep:futures-sink"]
